
=== Improvements

- https://github.com/eclipse-syson/syson/issues/1666[#1666] [export] Export `SatisfyRequirementUsage` in textual format.
- https://github.com/eclipse-syson/syson/issues/1653[#1653] [services] Improve service for creating root objects in a document so that it delegates non-SysML scenarios to the default service implementation.

=== New features

- https://github.com/eclipse-syson/syson/issues/1565[#1565] Provide a way to duplicate semantic element in the _Explorer_ view.

== v2025.12.0

=== Shapes

- https://github.com/eclipse-syson/syson/issues/1581[#1581] [diagrams] Display inherited ports as border nodes in diagrams.

=== Architectural decision records

- [ADR-002] Services organization

=== Breaking changes

- https://github.com/eclipse-syson/syson/issues/1628[#1628] [services] Introduce new services organization.
https://doc.mbse-syson.org/syson/main/developer-guide/index.html#services_organization[See the developer guide in the documentation for more details].
Also introduces new `ServiceMethod` helper class to build AQL service call expressions from type-safe Java method references instead of hardcoded strings.
- [services] _isActor(Element)_ has been moved from `ViewNodeService` to `MetamodelElementQueryService`.
- [services] The following services have been moved from `LabelService` and `ViewLabelService` to `DiagramQueryLabelService`:
* String getBorderNodeUsageLabel(Usage usage)
* String getCompartmentItemLabel(Documentation documentation)
* String getCompartmentItemLabel(Usage usage)
* String getContainerLabel(Element element)
* String getDefaultInitialDirectEditLabel(Comment comment)
* String getDefaultInitialDirectEditLabel(Element element)
* String getDefaultInitialDirectEditLabel(TextualRepresentation textualRepresentation)
* String getDependencyLabel(Dependency dependency)
* String getEdgeLabel(Element element)
* String getInitialDirectEditListItemLabel(Documentation documentation)